[package]
name = "ceramic-rs"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface"]
description= "My Rustacean implementation of my IMEI checker, Ceramic."
homepage = "https://github.com/angeldollface/ceramic.rs"
repository = "https://github.com/angeldollface/ceramic.rs"
documentation = "https://github.com/angeldollface/ceramic.rs"
readme = "README.markdown"
keywords = ["cli"]
categories = ["web-app"]
exclude = ["/.github"]

[dependencies]
gloo = "0.8.0"
wasm-bindgen = "0.2.83"
yew = { version = "0.20.0", features = ["csr"] }
web-sys = { version = "0.3.60", features = [ "HtmlInputElement" ] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1